# primeros_libros_iiif

./: README.md  pyproject.toml
libros/: __init__.py  generate.py
libros/dspace/: __init__.py  dspace.py
libros/iiif/: __init__.py  iiif.py
